# game-framework-core

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix
include/: angelscript.hpp  bitmasking.hpp  colors.hpp  event-poll.hpp  filesystem.hpp  init.hpp  logging.hpp  renderer.hpp  utils.hpp  window.hpp
include/easy-window/: builder.hpp  easy-window.hpp  instance.hpp
include/filesystem/: filesystem.hpp  utils.hpp
include/gameprefabs/: counter.hpp
include/init/: builder.hpp  instance.hpp
include/input/: input.hpp  scancodes.hpp
include/math/: angle.hpp  vec.hpp
include/renderer/: instance.hpp  utils.hpp  vk-exec.hpp
include/vulkan/: instance.hpp  vulkan.hpp
include/window/: instance.hpp
src/: angelscript.cpp  event-poll.cpp  filesystem.cpp  init.cpp  logging.cpp  renderer.cpp  utils.cpp  window.cpp
src/easy-window/: builder.cpp  instance.cpp
src/filesystem/: filesystem-linux.cpp  filesystem-windows.cpp  utils.cpp
src/init/: builder.cpp  instance.cpp
src/input/: input.cpp
src/renderer/: instance.cpp  utils.cpp  vk-exec.cpp
src/vulkan/: instance.cpp  vulkan.cpp
src/window/: instance.cpp
